<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        tools:context=".Cart">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:menu="@menu/menu_tool">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ac_lo_nica_regular"
                    android:text="@string/cart"
                    android:textColor="@color/text" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_bottom"
            app:itemIconTint="@color/icon_color"
            app:itemTextAppearanceActive="@style/ActiveTextAppearance"
            app:itemTextAppearanceInactive="@style/InActiveTextAppearance"
            app:itemTextColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delivery"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/cart_new_button"
            android:drawableLeft="@drawable/delivery"
            android:fontFamily="@font/manrope_medium"
            android:paddingLeft="15dp"
            android:text="@string/delivery"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/pickup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pickup"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/cart_new_button"
            android:drawableLeft="@drawable/pick"
            android:fontFamily="@font/manrope_medium"
            android:paddingLeft="15dp"
            android:text="@string/pick"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delivery"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4.dp"
        android:background="@drawable/custombutton"
        android:text="@string/continue_button"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

