<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/cartFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/cartItemPrice"
                app:layout_constraintStart_toEndOf="@+id/cartImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cartImage"
                app:layout_constraintTop_toBottomOf="@+id/cartFoodName" />

            <ImageView
                android:id="@+id/cartImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rumballs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/minusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/cart_img_button"
                android:contentDescription="@string/minus"
                android:src="@drawable/minus"
                app:layout_constraintBottom_toBottomOf="@+id/cartItemquantity"
                app:layout_constraintEnd_toStartOf="@+id/cartItemquantity"
                app:layout_constraintTop_toTopOf="@+id/cartItemquantity" />


            <ImageButton
                android:id="@+id/plusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/cart_img_button"
                android:contentDescription="@string/plus"
                android:src="@drawable/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartItemquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="1"
                android:textColor="@color/text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/plusButton"
                app:layout_constraintEnd_toStartOf="@+id/plusButton"
                app:layout_constraintTop_toTopOf="@+id/plusButton" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/cart_img_button"
                android:contentDescription="@string/bin"
                app:layout_constraintEnd_toEndOf="@+id/plusButton"
                app:layout_constraintStart_toStartOf="@+id/minusButton"
                app:layout_constraintTop_toBottomOf="@+id/cartItemquantity"
                app:srcCompat="@drawable/bin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>